--- a/app.json
+++ b/app.json
@@ -8,6 +8,10 @@
       "description": "A bot token from @BotFather.",
       "required": true
     },
+        "SUDO_USERS": {
+      "description": "Her yerde yönetici olarak sayılan kullanıcı kimliklerinin listesi (Müzik hesabınının id'si).",
+      "required": true
+    },
     "MONGO_URI": {
       "description": "A MongoDB URI.",
       "required": true
